[project]
name = "DataFaker"
version = "0.1.0"
description = "A simple script to generate fake data."
dependencies = [
    "faker",
    "requests",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py_modules = ["data_faker", "content_server_document_faker", "ContentServerApi"]
